Icon Spacing Fix

--- a/ss.css
+++ b/ss.css
@@ -8,7 +8,7 @@
 .tab {
 margin-left: 40em
 }
-a + a {
+a{
    padding-left: 1.4vw;
 }
 .core{
